test/integration/good/function-signatures/math/functions/generate_laplace_options.stan
data {
  int d_int;
  vector[d_int] d_vector;
}

transformed data {
  tuple(vector[d_int], real, int,int,int,int,int) transformed_data_tols;

  transformed_data_tols = generate_laplace_options(d_int);
  transformed_data_tols = generate_laplace_options(d_vector);
}
parameters {
  real y_p;
  vector[d_int] p_vector;

}
transformed parameters {

}
model {
  tuple(vector[d_int], real, int,int,int,int,int)  model_tols;

  model_tols = generate_laplace_options(d_int);
  model_tols = generate_laplace_options(d_vector);
  model_tols = generate_laplace_options(p_vector);
}
