test/integration/bad/unnormalized/lupmf_in_trans_data.stan

data {
    int d;
}
transformed data {
    real y;
    real x = poisson_lupmf(d | y);
}